# Simple-Counter

./: .replit  .vercelignore  =1.24.0  =22.7  bot.py  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  requirements.txt  tsconfig.json  vercel.json
api/: webhook.py
attached_assets/: Pasted--Copied-20-logs-from-Vercel-Dashboard-Project-simple-c-_1780401967479.txt  Pasted--Copied-27-logs-from-Vercel-Dashboard-Project-simple-c-_1780401789233.txt  Pasted--Copied-50-logs-from-Vercel-Dashboard-Project-simple-c-_1780402431875.txt  bot_1780211289558.py  requirements_1780211285204.txt
bot-env/: pyvenv.cfg
src/: bot.ts
src/api/: webhook.ts
