[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=22.7",
    "qrcode>=8.2",
    "pymupdf>=1.27.0",
]

[tool.vercel]
entrypoint = "api.webhook:handler"
